Fix line breaks in head, add description

--- a/assets/default.css
+++ b/assets/default.css
@@ -133,8 +133,6 @@ footer {
   width: 100%;
   padding: 2em 0;
   text-align: center;
-  position: absolute;
-  bottom: 0;
 }
 
 footer > div > * {
